@@ -1,5 +1,7 @@
 package com.example.my_books_backend.config;
 
+import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -10,13 +12,20 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.authentication.logout.LogoutSuccessHandler;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import com.example.my_books_backend.util.JwtUtil;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 
 @Configuration
@@ -26,6 +35,8 @@ import lombok.RequiredArgsConstructor;
 public class SecurityConfig {
     private final AuthTokenFilter authTokenFilter;
     private final SecurityEndpointsConfig securityEndpointsConfig;
+
+    private final JwtUtil jwtUtil;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -46,6 +57,12 @@ public class SecurityConfig {
 
         http.addFilterBefore(authTokenFilter, UsernamePasswordAuthenticationFilter.class);
 
+        // Controllerクラスで"/logout"のエンドポイントを用意しても、Spring Securityのデフォルトの
+        // "/logout"が呼ばれるので、カスタムのログアウト処理をデフォルトのログアウトに追加設定する
+        http.logout(logout -> logout.logoutUrl("/logout")
+                .logoutSuccessHandler(customLogoutSuccessHandler()).invalidateHttpSession(true)
+                .deleteCookies("JSESSIONID"));
+
         return http.build();
     }
 
@@ -63,14 +80,29 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("https://localhost:5173", "https://localhost:4173",
-                "https://my-books.localhost"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    // カスタムログアウト処理
+    @Bean
+    public LogoutSuccessHandler customLogoutSuccessHandler() {
+        return new LogoutSuccessHandler() {
+            @Override
+            public void onLogoutSuccess(HttpServletRequest request, HttpServletResponse response,
+                    Authentication authentication) throws IOException, ServletException {
+                Cookie cookie = jwtUtil.getInvalidateRefreshTokenCookie();
+                response.addCookie(cookie);
+                response.setStatus(HttpServletResponse.SC_OK);
+                // リダイレクトを行わないように、レスポンスを直接書き込む
+                response.getWriter().flush();
+            }
+        };
     }
 }
